fix: use UriComponentsBuilder for query params + get(0) for Java 17 compat